spinkube.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finicky
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  rules:
  - host: finicky.run.terrible.systems
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: finicky
            port:
              number: 80
  tls:
  - hosts:
    - finicky.run.terrible.systems
    secretName: finicky-run-terrible-systems-tls
